// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<Fragment>
  <li>
    <FormattedMessage
      defaultMessage="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      id="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      values={
        {
          "link": "onboarding.tutorial.with.jenkins.webhook.gitlab.step1.link",
        }
      }
    />
    <ul
      className="list-styled"
    >
      <li
        className="abs-width-600"
      >
        <p>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.webhook.gitlab.step1.url_with_branches"
          />
        </p>
        <CodeSnippet
          isOneLine={true}
          snippet="***JENKINS_SERVER_URL***/gitlab-webhook/post"
        />
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        [
          "trigger",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.gitlab.step2"
    />
    <ul
      className="list-styled"
    >
      <li>
        <strong>
          onboarding.tutorial.with.jenkins.webhook.gitlab.step2.repo
        </strong>
      </li>
      <li>
        <strong>
          onboarding.tutorial.with.jenkins.webhook.gitlab.step2.mr
        </strong>
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        [
          "add_webhook",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.gitlab.step3"
    />
  </li>
</Fragment>
`;

exports[`should render correctly: with branches disabled 1`] = `
<Fragment>
  <li>
    <FormattedMessage
      defaultMessage="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      id="onboarding.tutorial.with.jenkins.webhook.step1.sentence"
      values={
        {
          "link": "onboarding.tutorial.with.jenkins.webhook.gitlab.step1.link",
        }
      }
    />
    <ul
      className="list-styled"
    >
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.gitlab.step1.url_no_branches"
        />
      </li>
      <li>
        <LabelActionPair
          translationKey="onboarding.tutorial.with.jenkins.webhook.gitlab.step1.secret_token"
        />
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        [
          "trigger",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.gitlab.step2"
    />
    <ul
      className="list-styled"
    >
      <li>
        <strong>
          onboarding.tutorial.with.jenkins.webhook.gitlab.step2.repo
        </strong>
      </li>
    </ul>
  </li>
  <li>
    <SentenceWithHighlights
      highlightKeys={
        [
          "add_webhook",
        ]
      }
      translationKey="onboarding.tutorial.with.jenkins.webhook.gitlab.step3"
    />
  </li>
</Fragment>
`;
